<resources>
    <string name="app_provider_description">Provider of pokemon to access data</string>
    <string name="app_provider_name">Provider of pokemon</string>
    <string name="arene_badge_dialog_title">Select badge</string>
    <string name="arene_badge_invalid_field_error">Field Badge is invalid.</string>
    <string name="arene_badge_label">Badge</string>
    <string name="arene_empty_list">Arene list is empty !</string>
    <string name="arene_error_create">Arene creation error…</string>
    <string name="arene_error_edit">Arene edition error…</string>
    <string name="arene_maitre_dialog_title">Select maitre</string>
    <string name="arene_maitre_invalid_field_error">Field Maitre is invalid.</string>
    <string name="arene_maitre_label">Maitre</string>
    <string name="arene_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="arene_nom_label">Nom</string>
    <string name="arene_not_found">No Arene found to display…</string>
    <string name="arene_position_dialog_title">Select position</string>
    <string name="arene_position_invalid_field_error">Field Position is invalid.</string>
    <string name="arene_position_label">Position</string>
    <string name="arene_progress_load_message">Arene is loading…</string>
    <string name="arene_progress_load_relations_message">Arene related entities are loading...</string>
    <string name="arene_progress_load_relations_title">Arene related entities loading</string>
    <string name="arene_progress_load_title">Arene Loading progress</string>
    <string name="arene_progress_save_message">Arene is saving to database…</string>
    <string name="arene_progress_save_title">Arene save progress</string>
    <string name="attaque_degats_invalid_field_error">Field Degats is invalid.</string>
    <string name="attaque_degats_label">Degats</string>
    <string name="attaque_empty_list">Attaque list is empty !</string>
    <string name="attaque_error_create">Attaque creation error…</string>
    <string name="attaque_error_edit">Attaque edition error…</string>
    <string name="attaque_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="attaque_nom_label">Nom</string>
    <string name="attaque_not_found">No Attaque found to display…</string>
    <string name="attaque_progress_load_message">Attaque is loading…</string>
    <string name="attaque_progress_load_relations_message">Attaque related entities are loading...</string>
    <string name="attaque_progress_load_relations_title">Attaque related entities loading</string>
    <string name="attaque_progress_load_title">Attaque Loading progress</string>
    <string name="attaque_progress_save_message">Attaque is saving to database…</string>
    <string name="attaque_progress_save_title">Attaque save progress</string>
    <string name="attaque_puissance_invalid_field_error">Field Puissance is invalid.</string>
    <string name="attaque_puissance_label">Puissance</string>
    <string name="attaque_typeattaque_dialog_title">Select typeAttaque</string>
    <string name="attaque_typeattaque_invalid_field_error">Field TypeAttaque is invalid.</string>
    <string name="attaque_typeattaque_label">TypeAttaque</string>
    <string name="badge_empty_list">Badge list is empty !</string>
    <string name="badge_error_create">Badge creation error…</string>
    <string name="badge_error_edit">Badge edition error…</string>
    <string name="badge_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="badge_nom_label">Nom</string>
    <string name="badge_not_found">No Badge found to display…</string>
    <string name="badge_progress_load_message">Badge is loading…</string>
    <string name="badge_progress_load_relations_message">Badge related entities are loading...</string>
    <string name="badge_progress_load_relations_title">Badge related entities loading</string>
    <string name="badge_progress_load_title">Badge Loading progress</string>
    <string name="badge_progress_save_message">Badge is saving to database…</string>
    <string name="badge_progress_save_title">Badge save progress</string>
    <string name="choose_action_button_continue_game">Continuer une partie (Online)</string>
    <string name="choose_action_button_create_game">Commencer une partie (Online)</string>
    <string name="connected_choose_action_search_fight">Rejoindre un combat</string>
    <string name="connected_choose_action_launch_fight">Démarrer un combat</string>
    <string name="choose_pokemon_attack_dammage_label">Dégats :</string>
    <string name="choose_pokemon_attack_power_label">Puissance :</string>
    <string name="choose_pokemon_attack_type_label">Type :</string>
    <string name="choose_pokemon_button_back">RETOUR</string>
    <string name="choose_pokemon_button_validate">CHOISIR</string>
    <string name="choose_pokemon_empty_list">Aucun pokémon trouvé...</string>
    <string name="choose_pokemon_label">Choisi un pokémon dans la liste</string>
    <string name="combat_dresseur1_dialog_title">Select dresseur1</string>
    <string name="combat_dresseur2_dialog_title">Select dresseur2</string>
    <string name="combat_empty_list">Combat list is empty !</string>
    <string name="combat_error_create">Combat creation error…</string>
    <string name="combat_error_edit">Combat edition error…</string>
    <string name="image_error_null">Image is null</string>
    <string name="common_network_error">Connection error</string>
    <string name="no_network_error">No internet connection available</string>
    <string name="combat_dresseur1_invalid_field_error">Field Dresseur1 is invalid.</string>
    <string name="combat_dresseur1_label">Dresseur1</string>
    <string name="combat_dresseur1deviceid_label">Dresseur1DeviceId</string>
    <string name="combat_dresseur1vainqueur_label">Dresseur1Vainqueur</string>
    <string name="combat_dresseur2_invalid_field_error">Field Dresseur2 is invalid.</string>
    <string name="combat_dresseur2_label">Dresseur2</string>
    <string name="combat_dresseur2deviceid_label">Dresseur2DeviceId</string>
    <string name="combat_dresseur2vainqueur_label">Dresseur2Vainqueur</string>
    <string name="combat_duree_label">Duree</string>
    <string name="combat_lancele_date_title">Select lanceLe date</string>
    <string name="combat_lancele_invalid_field_error">Field LanceLe is invalid.</string>
    <string name="combat_lancele_label">LanceLe</string>
    <string name="combat_lancele_time_title">Select lanceLe time</string>
    <string name="combat_manager_console_launch_attack">attaque</string>
    <string name="combat_manager_console_your_turn_end_str">Choisi une attaque.</string>
    <string name="combat_manager_console_your_turn_start_str">A ton tour</string>
    <string name="combat_manager_console_waiting_for_attack_start_str">Attends que</string>
    <string name="combat_manager_console_waiting_for_attack_end_str">ait joué.</string>
    <string name="combat_manager_launch_attack_title">Lancement de l\'attaque</string>
    <string name="combat_manager_launch_attack_message">En attente du serveur...</string>
    <string name="combat_manager_launch_attack_error_message">Un problème est survenu lors de l\'envoi de la requête au serveur.</string>
    <string name="combat_manager_finish_fight_title">Enregistrement</string>
    <string name="combat_manager_finish_fight_message">Enregistrement du résultat...</string>
    <string name="combat_manager_finish_fight_winner">Bravo ! Tu as gagné !</string>
    <string name="combat_manager_finish_fight_looser">Dommage ! Tu as perdu !</string>
    <string name="combat_manager_finish_fight_error_message">Un problème est survenu lors de l\'enregistrement du résultat.</string>
    <string name="combat_manager_desertion_fight_title">Confirmation</string>
    <string name="combat_manager_desertion_fight_message">Es-tu certain de vouloir quitter le combat ? Tu seras considéré comme perdant.</string>
    <string name="combat_not_found">No Combat found to display…</string>
    <string name="combat_pokemon1_dialog_title">Select pokemon1</string>
    <string name="combat_pokemon1_invalid_field_error">Field Pokemon1 is invalid.</string>
    <string name="combat_pokemon1_label">Pokemon1</string>
    <string name="combat_pokemon1vainqueur_label">Pokemon1Vainqueur</string>
    <string name="combat_pokemon2_dialog_title">Select pokemon2</string>
    <string name="combat_pokemon2_invalid_field_error">Field Pokemon2 is invalid.</string>
    <string name="combat_pokemon2_label">Pokemon2</string>
    <string name="combat_pokemon2vainqueur_label">Pokemon2Vainqueur</string>
    <string name="combat_progress_load_message">Combat is loading…</string>
    <string name="combat_progress_load_relations_message">Combat related entities are loading...</string>
    <string name="combat_progress_load_relations_title">Combat related entities loading</string>
    <string name="combat_progress_load_title">Combat Loading progress</string>
    <string name="combat_progress_save_message">Combat is saving to database…</string>
    <string name="combat_progress_save_title">Combat save progress</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Del</string>
    <string name="common_edit">Edit</string>
    <string name="connexion_back_button">Retour</string>
    <string name="connexion_button">Connexion</string>
    <string name="connexion_error_connexion">Connexion impossible. Vérifie ton login et ton mot de passe...</string>
    <string name="connexion_inprogress_title">Tentative de connexion</string>
    <string name="connexion_login_invalid_field">Tu dois saisir un login !</string>
    <string name="connexion_login_label">Ton login :</string>
    <string name="connexion_password_invalid_field">Tu dois saisir un mot de passe !</string>
    <string name="connexion_password_label">Ton mot de passe :</string>
    <string name="connexon_inprogress_message">Connexion en cours...</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dresseur_empty_list">Dresseur list is empty !</string>
    <string name="dresseur_error_create">Dresseur creation error…</string>
    <string name="dresseur_error_edit">Dresseur edition error…</string>
    <string name="dresseur_login_invalid_field_error">Field Login is invalid.</string>
    <string name="dresseur_login_label">Login</string>
    <string name="dresseur_motdepasse_invalid_field_error">Field MotDePasse is invalid.</string>
    <string name="dresseur_motdepasse_label">MotDePasse</string>
    <string name="dresseur_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="dresseur_nom_label">Nom</string>
    <string name="pokemon_attaque1_label">Attaque1</string>
    <string name="pokemon_attaque2_label">Attaque2</string>
    <string name="pokemon_attaque3_label">Attaque3</string>
    <string name="pokemon_attaque4_label">Attaque4</string>
    <string name="pokemon_capturele_date_title">Select captureLe date</string>
    <string name="pokemon_capturele_label">CaptureLe</string>
    <string name="pokemon_capturele_time_title">Select captureLe time</string>
    <string name="pokemon_niveau_label">Niveau</string>
    <string name="pokemon_personnagenonjoueur_label">PersonnageNonJoueur</string>
    <string name="pokemon_surnom_label">Surnom</string>
    <string name="pokemon_typedepokemon_label">TypeDePokemon</string>
    <string name="typedepokemon_attaque_label">Attaque</string>
    <string name="typedepokemon_defense_label">Defense</string>
    <string name="typedepokemon_nom_label">Nom</string>
    <string name="typedepokemon_numpokedex_label">NumPokedex</string>
    <string name="typedepokemon_pokemons_label">Pokemons</string>
    <string name="typedepokemon_pv_label">Pv</string>
    <string name="typedepokemon_urlimage_label">UrlImage</string>
</resources>