<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:harmony="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   <TextView
        android:id="@+id/combat_lancele_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/combat_lancele_label"/>
    <com.maximeleau.harmony.android.pokemon.harmony.widget.DateTimeWidget
        android:id="@+id/combat_lancele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_lancele_label"
        harmony:dateTimeWidget_dateDialogTitle="@string/combat_lancele_date_title"
        harmony:dateTimeWidget_timeDialogTitle="@string/combat_lancele_time_title" />
   <TextView
        android:id="@+id/combat_duree_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_lancele"
        android:text="@string/combat_duree_label"/>
    <EditText
        android:id="@+id/combat_duree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/combat_duree_label" />
    <TextView
        android:id="@+id/combat_pokemon1_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_duree"
        android:text="@string/combat_pokemon1_label"/>
    <com.maximeleau.harmony.android.pokemon.harmony.widget.MultiEntityWidget
        android:id="@+id/combat_pokemon1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_pokemon1_label" />
    <TextView
        android:id="@+id/combat_pokemon2_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_pokemon1_button"
        android:text="@string/combat_pokemon2_label"/>
    <com.maximeleau.harmony.android.pokemon.harmony.widget.MultiEntityWidget
        android:id="@+id/combat_pokemon2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_pokemon2_label" />
    <TextView
        android:id="@+id/combat_dresseur1_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_pokemon2_button"
        android:text="@string/combat_dresseur1_label"/>
    <com.maximeleau.harmony.android.pokemon.harmony.widget.MultiEntityWidget
        android:id="@+id/combat_dresseur1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_dresseur1_label" />
    <TextView
        android:id="@+id/combat_dresseur2_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_dresseur1_button"
        android:text="@string/combat_dresseur2_label"/>
    <com.maximeleau.harmony.android.pokemon.harmony.widget.MultiEntityWidget
        android:id="@+id/combat_dresseur2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_dresseur2_label" />
   <TextView
        android:id="@+id/combat_dresseur1vainqueur_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_dresseur2_button"
        android:text="@string/combat_dresseur1vainqueur_label"/>
    <CheckBox
        android:id="@+id/combat_dresseur1vainqueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_dresseur1vainqueur_label" />
   <TextView
        android:id="@+id/combat_dresseur2vainqueur_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_dresseur1vainqueur"
        android:text="@string/combat_dresseur2vainqueur_label"/>
    <CheckBox
        android:id="@+id/combat_dresseur2vainqueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_dresseur2vainqueur_label" />
   <TextView
        android:id="@+id/combat_pokemon1vainqueur_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_dresseur2vainqueur"
        android:text="@string/combat_pokemon1vainqueur_label"/>
    <CheckBox
        android:id="@+id/combat_pokemon1vainqueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_pokemon1vainqueur_label" />
   <TextView
        android:id="@+id/combat_pokemon2vainqueur_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_pokemon1vainqueur"
        android:text="@string/combat_pokemon2vainqueur_label"/>
    <CheckBox
        android:id="@+id/combat_pokemon2vainqueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combat_pokemon2vainqueur_label" />
</RelativeLayout>
